Fix QDateEdit displaying day as a number for short and long day formats

When 2 (February) is entered as the month for (e.g.) 31/Jan/2000 (which
is following the format: "dd/MMM/yyyy"), the day is corrected to 29 but
displayed as its numerical value instead of its short (or long) name.

Task-number: QTBUG-27036 QTBUG-19091
Change-Id: I558ee13b224707d22b26c2ec2c045f96118bd5a1
Reviewed-by: Mitch Curtis <mitch.curtis@nokia.com>
Reviewed-by: aavit <qt_aavit@ovi.com>

cregit: 903903147924641a84e62432037b006c6bf541b7 https://github.com/qt/qtbase/commit/903903147924641a84e62432037b006c6bf541b7